--- a/src/styles.css
+++ b/src/styles.css
@@ -15,11 +15,83 @@
   --bg-color: #1b1b1b;
   /* --bg-color: #f7f7f7; */
   --bg-color-mobile: #ffffff;
+  --bg-color-2: #ff9575;
+  --bg-color-3: #2e2e2e;
+  --bg-color-hover-2: #ff957571;
   --font-color-1: #190600;
   --font-color-2: #757575;
+  --font-color-3: #ff9575;
   --bg-color-scroll: #cacaca;
 }
 
 body {
   background: var(--bg-color-2);
+}
+
+.wrapper {
+  padding: 1rem 2rem;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  font-weight: 700;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0 1rem;
+  font-size: 16px;
+  border-radius: 8px;
+  color: #5a5a5a;
+  width: fit-content;
+  height: 40px;
+  width: 100%;
+  transition: 0.3s;
+}
+
+input:disabled {
+  background-color: transparent;
+  cursor: not-allowed;
+}
+
+.btn.btn-primary {
+  background-color: var(--bg-color-scroll);
+  border: none;
+}
+
+.btn.btn-primary:hover {
+  color: #ffffff;
+  background-color: var(--bg-color-2);
+}
+
+.options::-webkit-scrollbar,
+.mobile::-webkit-scrollbar {
+  width: 7px;
+  border-radius: 2.2rem;
+  background-color: var(--bg-color-mobile);
+}
+.options::-webkit-scrollbar-track,
+.mobile::-webkit-scrollbar-track {
+  background-color: var(--bg-color-mobile);
+}
+.options::-webkit-scrollbar-thumb,
+.mobile::-webkit-scrollbar-thumb {
+  background-color: var(--bg-color-scroll);
+  border-radius: 1rem;
+}
+.options::-webkit-scrollbar-thumb:hover,
+.mobile::-webkit-scrollbar-thumb:hover {
+  background: var(--bg-color-scroll);
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+.options::-webkit-scrollbar-thumb:active,
+.mobile::-webkit-scrollbar-thumb:active {
+  background: var(--bg-color-scroll);
 }
