--- a/src/styles.css
+++ b/src/styles.css
@@ -15,12 +15,12 @@
   --bg-color: #1b1b1b;
   /* --bg-color: #f7f7f7; */
   --bg-color-mobile: #ffffff;
-  --bg-color-2: #ff9575;
+  --bg-color-2: #22e4ab;
   --bg-color-3: #2e2e2e;
-  --bg-color-hover-2: #ff957571;
+  --bg-color-hover-2: #22e4ab71;
   --font-color-1: #190600;
   --font-color-2: #757575;
-  --font-color-3: #ff9575;
+  --font-color-3: #22e4ab;
   --bg-color-scroll: #cacaca;
 }
 
