--- a/src/app/features/home/pages/home/home.component.css
+++ b/src/app/features/home/pages/home/home.component.css
@@ -1,5 +1,5 @@
 .hero .title {
-  font-size: 32px;
+  font-size: 28px;
   font-weight: 500;
   color: var(--font-color-1);
 }
@@ -17,24 +17,25 @@
   border-radius: 15px;
   width: 100%;
   height: 130px;
-  box-shadow: 0px 0 5px 0px rgb(0 0 0 / 10%);
   transition: 0.4s;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   display: flex;
-  gap: 5px;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 0.4rem;
 }
 
 .card:hover {
   cursor: pointer;
-  box-shadow: 0 3px 8px #00000050;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px; /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
 }
 
 .card figure {
   width: 100%;
-  height: 80px;
+  height: 60px;
 }
 
 .card figure img {
@@ -44,7 +45,7 @@
 }
 
 .card .card-title {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
 }
 
