--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -1,13 +1,12 @@
 <div class="wrapper">
   <section class="hero">
-    <span class="title">Welcome to unit converter</span>
+    <span class="title">Welcome to unit converter!</span>
   </section>
 
   <section class="cards">
     <div [routerLink]="['converter', i]" class="card" *ngFor="let prop of props; let i = index">
       <figure>
-        <img src="https://res.cloudinary.com/dfeujtobk/image/upload/v1664497598/Unit%20Converter/money-bag_h8jdax.png"
-          alt="section">
+        <img [src]="buildPathImage(prop.image)" loading="lazy" alt="prop-image">
       </figure>
       <span class="card-title">{{prop.name}}</span>
     </div>
