--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,6 @@
-<header>
+<header [class.scrolled]="changeColor">
   <div class="header-wrapper">
-
+    <span class="logo">Unit converter</span>
+    <app-toggle-theme></app-toggle-theme>
   </div>
 </header>
