--- a/src/app/features/features.component.css
+++ b/src/app/features/features.component.css
@@ -9,6 +9,7 @@
 }
 
 .mobile-wrapper {
+  position: relative;
   background: var(--bg-color-mobile);
   border-radius: 1.5rem;
   max-width: 480px;
@@ -20,6 +21,11 @@
   max-height: calc(100vh - 80px);
   height: calc(100vh - 80px);
   overflow-x: auto;
+  padding-top: 4.5rem;
+}
+
+app-header {
+  background: transparent;
 }
 
 @media (max-width: 480px) {
