--- a/src/app/features/home/pages/home/home.component.css
+++ b/src/app/features/home/pages/home/home.component.css
@@ -1,16 +1,9 @@
-.hero .title {
-  font-size: 28px;
-  font-weight: 500;
-  color: var(--font-color-1);
-}
-
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
   width: 100%;
   gap: 1rem;
-  margin: 1rem 0 0;
 }
 
 .card {
@@ -18,19 +11,18 @@
   width: 100%;
   height: 130px;
   transition: 0.4s;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  box-shadow: var(--box-shadow);
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
   padding: 1rem 0.4rem;
+  border: var(--card-border);
 }
 
 .card:hover {
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
-    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px; /* box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px; */
+  box-shadow: var(--box-shadow-hover);
 }
 
 .card figure {
@@ -47,6 +39,7 @@
 .card .card-title {
   font-size: 18px;
   font-weight: 500;
+  color: var(--font-color-1);
 }
 
 @media (max-width: 480px) {
@@ -56,5 +49,8 @@
 
   .card {
     height: 150px;
+  }
+  .card .card-title {
+    font-size: 16px;
   }
 }
