--- a/src/app/shared/toggle-theme/toggle-theme.component.css
+++ b/src/app/shared/toggle-theme/toggle-theme.component.css
@@ -17,7 +17,7 @@
 }
 
 .label .ball {
-  background-color: #fff;
+  background-color: #f3f3f3;
   border-radius: 50%;
   position: absolute;
   top: 2px;
@@ -32,10 +32,7 @@
   transform: translateX(24px);
 }
 
-.fa-moon {
-  color: #1b1b1b;
-}
-
+.fa-moon,
 .fa-sun {
-  color: #1b1b1b;
+  color: var(--bg-color-toggle);
 }
