--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -7,4 +7,10 @@
       <span class="card-title">{{prop.name}}</span>
     </div>
   </section>
+  <div class="made">
+    <span>
+      Made with ❤️ by
+      <a href="https://github.com/marcode24" target="_blank">Marco Cruz</a>
+    </span>
+  </div>
 </div>
